--- a/front/app/index.html
+++ b/front/app/index.html
@@ -9,7 +9,7 @@
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="https://vde-staticfiles.s3.eu-west-3.amazonaws.com/static/favicon.ico" />
     <title>Vue d'ensemble</title>
   </head>
   <body>
